# linear-regression

./: disney_movies.ipynb  fat_supply.ipynb  pyproject.toml
.ipynb_checkpoints/: disney_movies-checkpoint.ipynb
